Fix listener double-dispatch + sourceName + audit every Problem.Category
Three intertwined fixes to the antlr-compiler builder and a sweep of
the negative tests so every reportError call site is verifiably
exercised.

* `SimonBuilder.applyModifiers` / `applyModelComments` used to iterate
  `info.getModifiers()` / `info.getModelComments()` on every rule
  exit (`exitEveryRule`) while the same `ElementInfo` was on the
  scope. For valid modifiers, the duplicate setValue was idempotent
  and went unnoticed; for the error path, the same Problem was
  reported twice. Both lists are now drained after the first
  application so subsequent rule exits against the same scope find
  nothing to do.

* `SimonBuilder.applyModifier`'s unknown-modifier fallthrough used to
  `throw new CompilerException(...)`. Thrown from inside an ANTLR
  parse-listener callback, the exception was swallowed by the
  listener machinery, the diagnostic was lost, and the corrupted
  scope state tripped `assert currentScope.size() == 1` in
  `exitRootObject` — so a typo like `[bogus] application myApp`
  surfaced as a cryptic AssertionError. Converted to a
  `reportError(Severity.Error, Category.UnknownElement, ...)` call,
  matching the shape of the ambiguous-modifier branch right above.

* `SimonBuilder.ElementInfo`'s constructor took a `sourceName`
  parameter but never assigned it to the field, so
  `getSourceName()` always returned null. The two Problems reported
  via `featureOwnerInfo.getSourceName()` (the `MissingFeature` and
  `ElementAdmitsNoFeatures` paths inside `getObjectFeature`) ended
  up keyed under `null` in the ProblemHandler and never landed on
  the per-source Result. Net effect: those errors silently
  disappeared. Fixed by assigning the field.

* `Problem.message()` was package-private; made it `public` so test
  code can introspect the diagnostic message directly.

* Audited the negative-test suite against every `reportError` call
  site in SimonBuilder + SimonCompilerAntlrImpl.